Fixed Broken Styles With Woo Updated

--- a/assets/css/sass/partials/_appderma.scss
+++ b/assets/css/sass/partials/_appderma.scss
@@ -255,7 +255,7 @@ section.swiper-container {
 // Others
 
 .entry-content {
-  .store-hero-img {
+  .store-hero-img img {
     border: 1px solid $color-lightgray;
     height: 270px;
     margin-bottom: 25px;
